--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,19 +5,19 @@
     color: var(--accent-color);
 }
 
-.header-logo{
+.header__logo{
     margin-right: 93px;
 }
 
-.header-color-logo{
+.logo__text_color_black{
     color: #000000;
 }
 
-.footer-color-logo{
+.logo__text_color_white{
     color: #FFFFFF;
 }
 
-.footer-logo{
+.footer__logo{
     display: block;
     margin-bottom: 20px;
 }
