--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -3,7 +3,7 @@
     margin-right: 70px;
 }
 
-.contacts-link{
+.contact-list__link{
 font-style: normal;
 font-size: 14px;
 line-height: 1.71;
@@ -16,10 +16,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 
-.contact-item:not(:last-child){
+.contact-list__item:not(:last-child){
     margin-bottom: 9px;
 }
-.address{
+.contact-list__link_color_white{
     color: #FFFFFF;
 }
 
