--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,7 +14,7 @@
        background-repeat: no-repeat;
 }
 
-.hero-title{
+.hero__title{
 font-weight: 900;
 font-size: 44px;
 line-height:1.36;
@@ -28,7 +28,7 @@ margin-left: auto;
 margin-right: auto;
 }
 
-.hero-button{
+.hero__button{
 font-family: var(--primary-font);
 font-weight: 700;
 font-size: 16px;
