--- a/sass/layout/_spam.scss
+++ b/sass/layout/_spam.scss
@@ -1,4 +1,4 @@
-.spam-title{
+.spam__title{
     font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
@@ -8,11 +8,11 @@ color: #FFFFFF;
 margin-bottom: 20px;
 }
 
-.spam-form{
+.spam__form{
     display: flex;
 }
 
-.spam-input{
+.spam__input{
     font-family: inherit;
     font-size: inherit;
     color: #fff;
@@ -29,7 +29,7 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 }
 
-.spam-button{
+.spam__button{
     display: flex;
     text-align: center;
     align-items: center;
@@ -53,7 +53,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 
-.spam-button-svg{
+.spam__svg{
     margin-left: 10px;
     fill: #fff;
 }
