--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@
   overflow: hidden;
 }
 
-.client-link, .border, .modal-close-btn {
+.join-list__link, .client-list__logo, .work-list__over-container, .benefist__icons, .modal__close-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -72,26 +72,26 @@ body {
 
 .logo {
   font-family: "Raleway";
-  font-weight: 700;
   font-size: 26px;
-  line-height: 1.19;
+  font-weight: 700;
+  line-height: 1.1923076923;
   letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
-.header-logo {
+.header__logo {
   margin-right: 93px;
 }
 
-.header-color-logo {
+.logo__text_color_black {
   color: #000000;
 }
 
-.footer-color-logo {
+.logo__text_color_white {
   color: #FFFFFF;
 }
 
-.footer-logo {
+.footer__logo {
   display: block;
   margin-bottom: 20px;
 }
@@ -123,7 +123,7 @@ body {
   background-color: #fff;
 }
 
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -136,11 +136,16 @@ body {
   cursor: pointer;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn:hover, .modal-close-btn:focus {
+.modal__close-btn:hover, .modal__close-btn:focus {
   fill: var(--accent-color);
 }
 
-.modal-call {
+.contact-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form__title {
   display: block;
   margin-bottom: 12px;
   font-weight: 700;
@@ -151,12 +156,7 @@ body {
   color: #212121;
 }
 
-.modal-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.contact-form-field-key {
+.contact-form__data {
   display: block;
   margin-bottom: 4px;
   font-size: 12px;
@@ -165,16 +165,16 @@ body {
   color: var(--text-color);
 }
 
-.contact-form-input-wrapper {
+.contact-form__wrapper {
   position: relative;
   display: block;
 }
 
-.modal-label {
+.contact-form__field {
   margin-bottom: 10px;
 }
 
-.modal-input {
+.contact-form__input {
   padding-left: 42px;
   width: 100%;
   height: 40px;
@@ -182,7 +182,7 @@ body {
   border-radius: 4px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus {
+.contact-form__input:focus {
   outline: none;
   border-color: var(--accent-color);
 }
@@ -191,7 +191,7 @@ body {
   margin-bottom: 20px;
 }
 
-.label-svg {
+.contact-form__svg {
   fill: var(--secondary-color);
   position: absolute;
   top: 50%;
@@ -199,7 +199,7 @@ body {
   left: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus + .label-svg {
+.modal-input:focus + .contact-form__svg {
   fill: var(--accent-color);
 }
 
@@ -208,7 +208,7 @@ body {
   background-color: var(--accent-color);
 }
 
-.contack-form-message {
+.contack-form__textaera {
   display: block;
   width: 100%;
   height: 120px;
@@ -218,27 +218,27 @@ body {
   padding: 12px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contack-form-message:focus {
+.contack-form__textaera:focus {
   outline: none;
   border-color: var(--accent-color);
 }
-.contack-form-message::placeholder {
+.contack-form__textaera::placeholder {
   font-family: "Roboto";
   font-style: normal;
-  font-weight: 400;
   font-size: 12px;
-  line-height: 1.16;
+  font-weight: 400;
+  line-height: 1.1666666667;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
-.contact-form-checkbox-label {
+.contact-form__checkbox-label {
   justify-content: center;
   display: flex;
   font-size: 14px;
   margin-bottom: 30px;
 }
-.contact-form-checkbox-label::before {
+.contact-form__checkbox-label::before {
   display: block;
   width: 16px;
   height: 15px;
@@ -248,26 +248,26 @@ body {
   cursor: pointer;
   margin-right: 8px;
 }
-.contact-form-checkbox:checked + .contact-form-checkbox-label::before {
+.contact-form__checkbox:checked + .contact-form__checkbox-label::before {
   background-image: url(../images/v.svg);
   background-color: var(--accent-color);
   background-repeat: no-repeat;
   background-position: center;
   border: var(--accent-color);
 }
-.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+.contact-form__checkbox:focus + .contact-form__checkbox-label::before {
   outline: 1px solid var(--accent-color);
 }
 
-.label-link {
+.contact-form__link {
   color: var(--accent-color);
 }
 
-.modal-submit-button {
+.contact-form__button {
   font-family: var(--primary-font);
-  font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
+  font-weight: 700;
+  line-height: 1.875;
   display: flex;
   align-items: center;
   text-align: center;
@@ -284,7 +284,7 @@ body {
   margin-left: auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-submit-button:hover, .modal-submit-button:focus {
+.contact-form__button:hover, .contact-form__button:focus {
   border: none;
   background-color: #188CE8;
 }
@@ -310,11 +310,11 @@ body {
   display: flex;
 }
 
-.menu-item:not(:last-child) {
+.menu__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.menu-link {
+.menu__link {
   color: var(--secondary-color);
   font-weight: 500;
   font-size: 14px;
@@ -322,16 +322,16 @@ body {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-link:hover, .menu-link:focus {
+.menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
 }
 
-.current {
+.menu__link-active {
   position: relative;
   color: var(--accent-color);
 }
 
-.current::after {
+.menu__link-active::after {
   content: "";
   display: block;
   position: absolute;
@@ -348,11 +348,11 @@ body {
   margin-left: auto;
 }
 
-.contact-items:not(:last-child) {
+.contact__items:not(:last-child) {
   margin-right: 50px;
 }
 
-.contact-link {
+.contact__link {
   display: flex;
   align-items: center;
   color: var(--text-color);
@@ -362,19 +362,19 @@ body {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-link:hover, .contact-link:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
 }
 
-.header-icon {
+.contact__icon {
   fill: currentColor;
 }
 
-.mail-text {
+.contact__mail {
   margin-left: 10px;
 }
 
-.phone-text {
+.contact__phone {
   margin-left: 10px;
 }
 
@@ -394,7 +394,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -408,7 +408,7 @@ body {
   margin-right: auto;
 }
 
-.hero-button {
+.hero__button {
   font-family: var(--primary-font);
   font-weight: 700;
   font-size: 16px;
@@ -429,7 +429,7 @@ body {
   margin-left: auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-button:hover, .hero-button:focus {
+.hero__button:hover, .hero__button:focus {
   border: none;
   background-color: #188CE8;
 }
@@ -440,17 +440,14 @@ body {
   margin-top: -30px;
 }
 
-.benefits-list-item {
+.benefits-list__item {
   width: 270px;
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc((100% - 120px) / 4);
 }
 
-.benefist-icons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.benefist__icons {
   width: 270px;
   height: 120px;
   background-color: #F5F4FA;
@@ -458,7 +455,7 @@ body {
   margin-bottom: 30px;
 }
 
-.benefits-list-item-title {
+.benefits-list__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -468,7 +465,7 @@ body {
   margin-bottom: 10px;
 }
 
-.benefits-list-item-text {
+.benefits-list__text {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -478,7 +475,7 @@ body {
   padding-top: 0;
 }
 
-.work-title {
+.work__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -496,7 +493,7 @@ body {
   margin-top: -30px;
 }
 
-.work-list-item {
+.work-list__item {
   position: relative;
   width: 370px;
   margin-left: 30px;
@@ -504,10 +501,7 @@ body {
   flex-basis: calc((100% - 90px) / 3);
 }
 
-.over {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.work-list__over-container {
   width: 100%;
   height: 70px;
   position: absolute;
@@ -515,7 +509,7 @@ body {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.over-text {
+.work-list__over-text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -544,7 +538,7 @@ body {
   margin-top: -30px;
 }
 
-.team-list-item {
+.team-list__item {
   width: 270px;
   margin-left: 30px;
   margin-top: 30px;
@@ -553,14 +547,14 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-content {
+.team-list__content {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #FFFFFF;
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-item-title {
+.team-list__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -570,7 +564,7 @@ body {
   margin-bottom: 10px;
 }
 
-.team-list-item-text {
+.team-list__text {
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
@@ -583,30 +577,33 @@ body {
   justify-content: center;
 }
 
-.list-unit:not(last-child) {
+.social-icons-list__item:not(last-child) {
   margin-right: 10px;
 }
 
-.border {
+.social-icons-list__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background-color: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.border:hover, .border:focus {
+.social-icons-list__link:hover, .social-icons-list__link:focus {
   background-color: var(--accent-color);
 }
 
-.social-icon {
+.social-icons-list__svg {
   fill: #AFB1B8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.border:hover .social-icon, .border:focus .social-icon {
+.social-icons-list__link:hover .social-icons-list__svg, .social-icons-list__link:focus .social-icons-list__svg {
   fill: #fff;
 }
 
-.clients-title {
+.client-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -616,36 +613,31 @@ body {
   margin-bottom: 50px;
 }
 
-.clients-list {
+.client-list {
   display: flex;
 }
 
-.client-link {
+.client-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client-list__logo {
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   width: 170px;
   height: 92px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client-link:hover, .client-link:focus {
+.client-list__logo:hover, .client-list__logo:focus {
   border: 1px solid var(--accent-color);
 }
 
-.client-logo:not(:last-child) {
-  margin-right: 30px;
-}
-
-.svg-logo {
+.client-list__svg {
   fill: var(--logo-color);
-}
-
-.client-link:hover .svg-logo,
-.client-link:focus .svg-logo {
-  fill: var(--accent-color);
-}
-
-.svg-logo {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.client-list__logo:hover .client-list__svg, .client-list__logo:focus .client-list__svg {
+  fill: var(--accent-color);
 }
 
 .caption {
@@ -770,7 +762,7 @@ body {
   margin-right: 70px;
 }
 
-.contacts-link {
+.contact-list__link {
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -778,15 +770,15 @@ body {
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts-link:hover, .contacts-link:focus {
+.contact-list__link:hover, .contact-list__link:focus {
   color: var(--accent-color);
 }
 
-.contact-item:not(:last-child) {
+.contact-list__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.address {
+.contact-list__link_color_white {
   color: #FFFFFF;
 }
 
@@ -794,7 +786,7 @@ body {
   margin-right: 93px;
 }
 
-.join-title {
+.join___title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -808,30 +800,27 @@ body {
   display: flex;
 }
 
-.join-items:not(:last-child) {
+.join-list__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.join-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.join-list__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.join-link:hover, .join-link:focus {
+.join-list__link:hover, .join-list__link:focus {
   background-color: var(--accent-color);
 }
 
-.join-logo {
+.join-list__logo {
   fill: #fff;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.spam-title {
+.spam__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -841,11 +830,11 @@ body {
   margin-bottom: 20px;
 }
 
-.spam-form {
+.spam__form {
   display: flex;
 }
 
-.spam-input {
+.spam__input {
   font-family: inherit;
   font-size: inherit;
   color: #fff;
@@ -862,15 +851,15 @@ body {
   border-radius: 4px;
 }
 
-.spam-button {
+.spam__button {
   display: flex;
-  padding: 10px 28px;
+  text-align: center;
   align-items: center;
+  padding: 10px 28px;
   font-family: var(--primary-font);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #FFFFFF;
   background-color: var(--accent-color);
@@ -880,12 +869,12 @@ body {
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.spam-button:hover, .spam-button:focus {
+.spam__button:hover, .spam__button:focus {
   border: none;
   background-color: #188CE8;
 }
 
-.spam-button-svg {
+.spam__svg {
   margin-left: 10px;
   fill: #fff;
 }/*# sourceMappingURL=main.css.map */
