--- a/sass/components/_modal-contact-form.scss
+++ b/sass/components/_modal-contact-form.scss
@@ -1,4 +1,9 @@
-.modal-call{
+.contact-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-form__title{
     display: block;
     margin-bottom: 12px;
     font-weight: 700;
@@ -9,12 +14,7 @@ letter-spacing: 0.03em;
 color: #212121;
 }
 
-.modal-form{
-    display: flex;
-    flex-direction: column;
-}
-
-.contact-form-field-key{
+.contact-form__data{
     display: block;
     margin-bottom: 4px;
     font-size: 12px;
@@ -23,16 +23,16 @@ color: #212121;
     color: var(--text-color);
 }
 
-.contact-form-input-wrapper{
+.contact-form__wrapper{
     position: relative;
     display: block;
 }
 
-.modal-label{
+.contact-form__field{
     margin-bottom: 10px;
 }
 
-.modal-input{
+.contact-form__input{
     padding-left: 42px;
     width: 100%;
     height: 40px;
@@ -49,7 +49,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 20px;
 }
 
-.label-svg{
+.contact-form__svg{
     fill: var(--secondary-color);
     position: absolute;
     top: 50%;
@@ -66,7 +66,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: var(--accent-color);
 }
 
-.contack-form-message{
+.contack-form__textaera{
     display: block;
     width: 100%;
     height: 120px;
@@ -90,7 +90,7 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 
-.contact-form-checkbox-label{
+.contact-form__checkbox-label{
     justify-content: center;
     display: flex;
     font-size: 14px;
@@ -104,25 +104,25 @@ transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         content: "";
         cursor: pointer;
         margin-right: 8px;
-        .contact-form-checkbox:checked+&{
+        .contact-form__checkbox:checked+&{
             background-image: url(../images/v.svg);
             background-color:var(--accent-color);
             background-repeat: no-repeat;
             background-position: center;
             border: var(--accent-color);
         }
-        .contact-form-checkbox:focus+&{
+        .contact-form__checkbox:focus+&{
             outline: 1px solid var(--accent-color);
         }
     }
     
 }
 
-.label-link{
+.contact-form__link{
     color: var(--accent-color);
 }
 
-.modal-submit-button{
+.contact-form__button{
     font-family: var(--primary-font);
     @include font(16px, 700, 30px);
     display: flex;
