--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -4,15 +4,15 @@
     margin-top: -30px;
 }
 
-.benefits-list-item{
+.benefits-list__item{
 width: 270px;
 margin-left: 30px;
 margin-top: 30px;
 flex-basis: calc((100% - 120px) / 4);
 }
 
-.benefist-icons{
-    @extend align;
+.benefist__icons{
+    @extend %align;
 width: 270px;
 height: 120px;
 background-color: #F5F4FA;
@@ -20,7 +20,7 @@ border-radius: 4px;
 margin-bottom: 30px;
 }
 
-.benefits-list-item-title{
+.benefits-list__title{
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
@@ -30,7 +30,7 @@ color: var(--secondary-color);
 margin-bottom: 10px;
 }
 
-.benefits-list-item-text{
+.benefits-list__text{
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
