--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,4 +1,4 @@
-.clients-title{
+.client-title{
     font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
@@ -8,11 +8,15 @@ color: var(--secondary-color);
 margin-bottom: 50px;
 }
 
-.clients-list{
+.client-list{
     display: flex;
 }
 
-.client-link{
+.client-list__item:not(:last-child){
+    margin-right: 30px;
+}
+
+.client-list__logo{
     @extend %align;
     border: 1px solid #AFB1B8;
     border-radius: 4px;    
@@ -25,20 +29,13 @@ margin-bottom: 50px;
 }
 }
 
-.client-logo:not(:last-child){
-    margin-right: 30px;
-}
-
-.svg-logo{
+.client-list__svg{
     fill: var(--logo-color);
-}
-
-
-
-.client-link:hover .svg-logo,
-.client-link:focus .svg-logo{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .client-list__logo:hover &,
+    .client-list__logo:focus &{
     fill: var(--accent-color);
 }
-.svg-logo{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
