--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -36,12 +36,12 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 
-.current{
+.menu__link-active{
     position: relative;
     color: var(--accent-color);
 }
 
-.current::after{
+.menu__link-active::after{
     content: "";
     display: block;
     position: absolute;
@@ -62,11 +62,11 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: auto;
 }
 
-.contact-items:not(:last-child){
+.contact__items:not(:last-child){
     margin-right: 50px;
 }
 
-.contact-link{
+.contact__link{
     display: flex;
     align-items: center;
     color: var(--text-color);
@@ -81,14 +81,14 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 
-.header-icon{
+.contact__icon{
     fill: currentColor;
 }
 
-.mail-text{
+.contact__mail{
     margin-left: 10px;
 }
 
-.phone-text{
+.contact__phone{
     margin-left: 10px;
 }
