--- a/sass/layout/_join.scss
+++ b/sass/layout/_join.scss
@@ -2,7 +2,7 @@
     margin-right: 93px;
 }
 
-.join-title{
+.join___title{
     font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
@@ -16,12 +16,12 @@ margin-bottom: 20px;
     display: flex;
 }
 
-.join-items:not(:last-child){
+.join-list__item:not(:last-child){
 margin-right: 10px;
 }
 
-.join-link{
-   @extend align;
+.join-list__link{
+   @extend %align;
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -33,7 +33,7 @@ margin-right: 10px;
 }
 }
 
-.join-logo{
+.join-list__logo{
     fill: #fff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
