--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -18,7 +18,7 @@ margin-bottom: 50px;
     margin-top: -30px;
 }
 
-.team-list-item{
+.team-list__item{
     width: 270px;
     margin-left: 30px;
     margin-top: 30px;
@@ -27,14 +27,16 @@ margin-bottom: 50px;
 border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-content{
+.team-list__content{
     padding-top: 30px;
     padding-bottom: 30px;
     background-color:#FFFFFF;
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-item-title{
+.team-list__title{
+font-weight: 500;
+font-size: 16px;
 line-height: 1.18;
 letter-spacing: 0.03em;
 color:var(--secondary-color);
@@ -42,7 +44,7 @@ text-align: center;
 margin-bottom: 10px;
 }
 
-.team-list-item-text{
+.team-list__text{
 font-size: 16px;
 line-height: 1.18;
 letter-spacing: 0.03em;
@@ -55,12 +57,14 @@ text-align: center;
   justify-content: center;
 }
 
-.list-unit:not(last-child){
+.social-icons-list__item:not(last-child){
     margin-right: 10px;
 }
     
-.border{
-    @extend %align;
+.social-icons-list__link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -73,11 +77,11 @@ text-align: center;
 }
 }
 
-.social-icon{
+.social-icons-list__svg{
     fill:#AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .border:hover &,
-    .border:focus &{
+    .social-icons-list__link:hover &,
+    .social-icons-list__link:focus &{
     fill: #fff;
 }
 }
