--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -2,7 +2,7 @@
     padding-top: 0;
 }
 
-.work-title{
+.work__title{
 font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
@@ -20,7 +20,7 @@ margin-bottom: 50px;
     margin-top: -30px;
 }
 
-.work-list-item{
+.work-list__item{
     position: relative;
     width: 370px;
 margin-left: 30px;
@@ -28,8 +28,8 @@ margin-top: 30px;
 flex-basis: calc((100% - 90px) / 3);
 }
 
-.over{
-    @extend align;
+.work-list__over-container{
+    @extend %align;
     width: 100%;
     height: 70px;
     position: absolute;
@@ -37,7 +37,7 @@ flex-basis: calc((100% - 90px) / 3);
    background-color: rgba(47, 48, 58, 0.8);
 }
 
-.over-text{
+.work-list__over-text{
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
