--- a/css/main.css
+++ b/css/main.css
@@ -20,10 +20,20 @@
   overflow: hidden;
 }
 
-.join-list__link, .client-list__logo, .work-list__over-container, .benefist__icons, .modal__close-btn {
+.join-list__link, .client-list__link, .work-list__over-container, .benefist-list__box, .modal__close-btn {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+  margin-bottom: 50px;
 }
 
 h1,
@@ -79,15 +89,15 @@ body {
   color: var(--accent-color);
 }
 
-.header__logo {
+.page-header__logo {
   margin-right: 93px;
 }
 
-.logo__text_color_black {
+.logo__black {
   color: #000000;
 }
 
-.logo__text_color_white {
+.logo__white {
   color: #FFFFFF;
 }
 
@@ -293,7 +303,7 @@ body {
   border-bottom: 1px solid #ECECEC;
 }
 
-.navigation-container {
+.page-header__container {
   display: flex;
   padding-top: 24px;
   padding-bottom: 24px;
@@ -306,7 +316,7 @@ body {
 }
 
 .menu,
-.contact {
+.contacts {
   display: flex;
 }
 
@@ -326,12 +336,11 @@ body {
   color: var(--accent-color);
 }
 
-.menu__link-active {
+.menu__link_active {
   position: relative;
   color: var(--accent-color);
 }
-
-.menu__link-active::after {
+.menu__link_active::after {
   content: "";
   display: block;
   position: absolute;
@@ -343,16 +352,16 @@ body {
   background-color: var(--accent-color);
 }
 
-.contact {
+.contacts {
   display: flex;
   margin-left: auto;
 }
 
-.contact__items:not(:last-child) {
-  margin-right: 50px;
+.contacts__item:not(:last-child) {
+  margin-right: 30px;
 }
 
-.contact__link {
+.contacts__link {
   display: flex;
   align-items: center;
   color: var(--text-color);
@@ -362,28 +371,18 @@ body {
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact__link:hover, .contact__link:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
 }
 
-.contact__icon {
+.contacts__icon {
   fill: currentColor;
-}
-
-.contact__mail {
-  margin-left: 10px;
-}
-
-.contact__phone {
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-}
-
-.owerlay {
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
@@ -447,7 +446,7 @@ body {
   flex-basis: calc((100% - 120px) / 4);
 }
 
-.benefist__icons {
+.benefist-list__box {
   width: 270px;
   height: 120px;
   background-color: #F5F4FA;
@@ -471,18 +470,8 @@ body {
   letter-spacing: 0.03em;
 }
 
-.work {
+.section_no-padding-top {
   padding-top: 0;
-}
-
-.work__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-color);
-  margin-bottom: 50px;
 }
 
 .work-list {
@@ -518,18 +507,8 @@ body {
   color: #FFFFFF;
 }
 
-.team {
+.section_another-bg {
   background-color: #F5F4FA;
-}
-
-.team-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-color);
-  margin-bottom: 50px;
 }
 
 .team-list {
@@ -571,17 +550,17 @@ body {
   text-align: center;
 }
 
-.social-icons-list {
+.socials {
   margin-top: 16px;
   display: flex;
   justify-content: center;
 }
 
-.social-icons-list__item:not(last-child) {
+.socials__item:not(last-child) {
   margin-right: 10px;
 }
 
-.social-icons-list__link {
+.socials__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -591,26 +570,16 @@ body {
   background-color: #fff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-icons-list__link:hover, .social-icons-list__link:focus {
+.socials__link:hover, .socials__link:focus {
   background-color: var(--accent-color);
 }
 
-.social-icons-list__svg {
+.socials__svg {
   fill: #AFB1B8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-icons-list__link:hover .social-icons-list__svg, .social-icons-list__link:focus .social-icons-list__svg {
+.socials__link:hover .socials__svg, .socials__link:focus .socials__svg {
   fill: #fff;
-}
-
-.client-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-color);
-  margin-bottom: 50px;
 }
 
 .client-list {
@@ -621,14 +590,14 @@ body {
   margin-right: 30px;
 }
 
-.client-list__logo {
+.client-list__link {
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   width: 170px;
   height: 92px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client-list__logo:hover, .client-list__logo:focus {
+.client-list__link:hover, .client-list__link:focus {
   border: 1px solid var(--accent-color);
 }
 
@@ -636,25 +605,21 @@ body {
   fill: var(--logo-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.client-list__logo:hover .client-list__svg, .client-list__logo:focus .client-list__svg {
+.client-list__link:hover .client-list__svg, .client-list__link:focus .client-list__svg {
   fill: var(--accent-color);
 }
 
-.caption {
-  visibility: hidden;
-}
-
-.button-items {
+.buttons {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.button-item:not(:last-child) {
+.buttons__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.button {
+.buttons__content {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
@@ -669,40 +634,40 @@ body {
   padding: 6px 22px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button:hover, .button:focus {
+.buttons__content:hover, .buttons__content:focus {
   background-color: var(--accent-color);
   color: #FFFFFF;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.product-list {
+.products-list {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -30px;
 }
 
-.produkt-link {
-  display: block;
-  color: inherit;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.produkt-link:hover, .produkt-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.product-list-item {
+.products-list__item {
   margin-top: 30px;
   margin-left: 30px;
   flex-basis: calc((100% - 90px) / 3);
 }
 
-.overlay-product {
+.produkts-list__link {
+  display: block;
+  color: inherit;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.produkts-list__link:hover, .produkts-list__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.produkts-list__box {
   overflow: hidden;
   position: relative;
 }
 
-.product-overlay {
+.products-list__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -712,11 +677,11 @@ body {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.product-overlay:hover .product-overlay, .product-overlay:focus .product-overlay {
+.produkts-list__link:hover .products-list__overlay, .produkts-list__link:focus .products-list__overlay {
   transform: translateY(0);
 }
 
-.product-overlay-text {
+.products-list__description {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
@@ -724,14 +689,14 @@ body {
   padding: 63px 24px;
 }
 
-.card-content {
+.products-list__box-below {
   padding: 24px 20px;
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
 }
 
-.product-list-item-title {
+.products-list__title {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
@@ -740,7 +705,7 @@ body {
   color: var(--secondary-color);
 }
 
-.product-list-item-text {
+.products-list__text {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
