--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -5,15 +5,15 @@
     color: var(--accent-color);
 }
 
-.header__logo{
+.page-header__logo{
     margin-right: 93px;
 }
 
-.logo__text_color_black{
+.logo__black{
     color: #000000;
 }
 
-.logo__text_color_white{
+.logo__white{
     color: #FFFFFF;
 }
 
