--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -11,7 +11,7 @@ margin-top: 30px;
 flex-basis: calc((100% - 120px) / 4);
 }
 
-.benefist__icons{
+.benefist-list__box{
     @extend %align;
 width: 270px;
 height: 120px;
