--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,13 +1,3 @@
-.client-title{
-    font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--secondary-color);
-margin-bottom: 50px;
-}
-
 .client-list{
     display: flex;
 }
@@ -16,7 +6,7 @@ margin-bottom: 50px;
     margin-right: 30px;
 }
 
-.client-list__logo{
+.client-list__link{
     @extend %align;
     border: 1px solid #AFB1B8;
     border-radius: 4px;    
@@ -32,8 +22,8 @@ margin-bottom: 50px;
 .client-list__svg{
     fill: var(--logo-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .client-list__logo:hover &,
-    .client-list__logo:focus &{
+    .client-list__link:hover &,
+    .client-list__link:focus &{
     fill: var(--accent-color);
 }
 }
