--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     border-bottom: 1px solid #ECECEC;;
 }
 
-.navigation-container{
+.page-header__container{
     display: flex;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -15,7 +15,7 @@
 }
 
 .menu,
-.contact{
+.contacts{
     display: flex; 
 }
 
@@ -36,37 +36,32 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 
-.menu__link-active{
+.menu__link_active{
     position: relative;
     color: var(--accent-color);
+    &::after{
+        content: "";
+        display: block;
+        position: absolute;
+        top: 266%;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+    }
 }
 
-.menu__link-active::after{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 266%;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-}
-
-
-
-
-
-.contact{
+.contacts{
     display: flex;
     margin-left: auto;
 }
 
-.contact__items:not(:last-child){
-    margin-right: 50px;
+.contacts__item:not(:last-child){
+    margin-right: 30px;
 }
 
-.contact__link{
+.contacts__link{
     display: flex;
     align-items: center;
     color: var(--text-color);
@@ -81,14 +76,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 }
 
-.contact__icon{
+.contacts__icon{
     fill: currentColor;
+    margin-right: 10px;
 }
 
-.contact__mail{
-    margin-left: 10px;
-}
-
-.contact__phone{
-    margin-left: 10px;
-}
