--- a/sass/layout/_product.scss
+++ b/sass/layout/_product.scss
@@ -1,11 +1,17 @@
-.product-list{
+.products-list{
     display: flex;
     flex-wrap: wrap;
     margin-top: -30px;
     margin-left: -30px;
 }
 
-.produkt-link{
+.products-list__item{
+    margin-top: 30px;
+    margin-left: 30px;
+    flex-basis: calc((100% - 90px) / 3);
+    }
+
+.produkts-list__link{
     display: block;
     color: inherit;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -15,20 +21,12 @@
 }
 }
 
-
-
-.product-list-item{
-margin-top: 30px;
-margin-left: 30px;
-flex-basis: calc((100% - 90px) / 3);
-}
-
-.overlay-product{
+.produkts-list__box{
     overflow: hidden;
     position: relative;
 }
 
-.product-overlay{
+.products-list__overlay{
     position: absolute;
     top: 0;
     left: 0;
@@ -37,13 +35,13 @@ flex-basis: calc((100% - 90px) / 3);
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover .product-overlay,
-    &:focus .product-overlay{
+    .produkts-list__link:hover &,
+    .produkts-list__link:focus &{
         transform: translateY(0);
     }
 }
 
-.product-overlay-text{
+.products-list__description{
     font-size: 18px;
 line-height: 1.55;
 letter-spacing: 0.03em;
@@ -51,23 +49,25 @@ color: #FFFFFF;
 padding: 63px 24px;
 }
 
-.card-content{
+.products-list__box-below{
    padding: 24px 20px;
    border-left:  1px solid #EEEEEE;
    border-right:  1px solid #EEEEEE;
    border-bottom:  1px solid #EEEEEE;
 }
 
-.product-list-item-title{
+.products-list__title{
     margin-bottom: 4px;
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color:var(--secondary-color)
+
+
 }
 
-.product-list-item-text{
+.products-list__text{
 font-size: 16px;
 line-height:1.87;
 letter-spacing: 0.03em;
