--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,15 +1,5 @@
-.team{
+.section_another-bg{
     background-color:#F5F4FA;
-}
-
-.team-title{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color:var(--secondary-color);
-margin-bottom: 50px;
 }
 
 .team-list{
@@ -51,17 +41,17 @@ letter-spacing: 0.03em;
 text-align: center;
 }
 
-.social-icons-list{
+.socials{
     margin-top: 16px;
     display: flex;
   justify-content: center;
 }
 
-.social-icons-list__item:not(last-child){
+.socials__item:not(last-child){
     margin-right: 10px;
 }
     
-.social-icons-list__link{
+.socials__link{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,11 +67,11 @@ text-align: center;
 }
 }
 
-.social-icons-list__svg{
+.socials__svg{
     fill:#AFB1B8;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .social-icons-list__link:hover &,
-    .social-icons-list__link:focus &{
+    .socials__link:hover &,
+    .socials__link:focus &{
     fill: #fff;
 }
 }
