--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,15 +1,5 @@
-.work{
+.section_no-padding-top{
     padding-top: 0;
-}
-
-.work__title{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--secondary-color);
-margin-bottom: 50px;
 }
 
 .work-list{
