--- a/css/main.css
+++ b/css/main.css
@@ -1759,7 +1759,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .produkts-list__link:hover .products-list__overlay, .produkts-list__link:focus .products-list__overlay {
@@ -1809,11 +1809,13 @@ body {
   .products-list__item {
     margin-right: 30px;
     margin-bottom: 30px;
-    width: calc((100% - 60px) / 2);
+    flex-basis: calc((100% - 60px) / 2);
   }
 
   .produkts-list__link {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     color: inherit;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -1824,6 +1826,7 @@ body {
   .produkts-list__box {
     overflow: hidden;
     position: relative;
+    flex-grow: 1;
   }
 
   .products-list__overlay {
@@ -1833,7 +1836,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .produkts-list__link:hover .products-list__overlay, .produkts-list__link:focus .products-list__overlay {
@@ -1868,6 +1871,78 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.875;
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+
+  .products-list__item {
+    margin-top: 30px;
+    margin-left: 30px;
+    flex-basis: calc((100% - 90px) / 3);
+  }
+
+  .produkts-list__link {
+    display: block;
+    color: inherit;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .produkts-list__link:hover, .produkts-list__link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+
+  .produkts-list__box {
+    overflow: hidden;
+    position: relative;
+  }
+
+  .products-list__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(101%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .produkts-list__link:hover .products-list__overlay, .produkts-list__link:focus .products-list__overlay {
+    transform: translateY(0);
+  }
+
+  .products-list__description {
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    padding: 63px 24px;
+  }
+
+  .products-list__box-below {
+    padding: 24px 20px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+  }
+
+  .products-list__title {
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--secondary-color);
+  }
+
+  .products-list__text {
+    font-size: 16px;
+    line-height: 1.87;
     letter-spacing: 0.03em;
   }
 }
