--- a/sass/layout/_product.scss
+++ b/sass/layout/_product.scss
@@ -24,7 +24,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-    transform: translateY(100%);
+    transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .produkts-list__link:hover &,
     .produkts-list__link:focus &{
@@ -72,12 +72,14 @@ letter-spacing: 0.03em;
     .products-list__item{
         margin-right: 30px;
         margin-bottom: 30px;
-        width: calc((100% - 2 * 30px) / 2);
-        // flex-basis: calc((100% - 90px) / 3);
+        // width: calc((100% - 2 * 30px) / 2);
+        flex-basis: calc((100% - 60px) / 2);
         }
-
+       
         .produkts-list__link{
-            display: block;
+            display: flex;
+            flex-direction: column;
+            height: 100%;   
             color: inherit;
             transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
             &:hover,
@@ -89,6 +91,7 @@ letter-spacing: 0.03em;
         .produkts-list__box{
             overflow: hidden;
             position: relative;
+            flex-grow: 1;
         }
         
         .products-list__overlay{
@@ -98,7 +101,7 @@ letter-spacing: 0.03em;
             width: 100%;
             height: 100%;
             background-color: rgba(33, 150, 243, 0.9);
-            transform: translateY(100%);
+            transform: translateY(101%);
             transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
             .produkts-list__link:hover &,
             .produkts-list__link:focus &{
@@ -121,10 +124,6 @@ letter-spacing: 0.03em;
            border-bottom:  1px solid #EEEEEE;
         }
 
-        .products-list__box-below_padding{
-            // padding-bottom: 54px;
-        }
-        
         .products-list__title{
             margin-bottom: 4px;
             @include font(18px, 700, 36px);
@@ -139,77 +138,79 @@ letter-spacing: 0.03em;
         letter-spacing: 0.03em;
         }
 }
-// .products-list{
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-top: -30px;
-//     margin-left: -30px;
-// }
-
-// .products-list__item{
-//     margin-top: 30px;
-//     margin-left: 30px;
-//     flex-basis: calc((100% - 90px) / 3);
-//     }
-
-// .produkts-list__link{
-//     display: block;
-//     color: inherit;
-//     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     &:hover,
-//     &:focus{
-//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-// }
-// }
-
-// .produkts-list__box{
-//     overflow: hidden;
-//     position: relative;
-// }
-
-// .products-list__overlay{
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(33, 150, 243, 0.9);
-//     transform: translateY(100%);
-//     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     .produkts-list__link:hover &,
-//     .produkts-list__link:focus &{
-//         transform: translateY(0);
-//     }
-// }
-
-// .products-list__description{
-//     font-size: 18px;
-// line-height: 1.55;
-// letter-spacing: 0.03em;
-// color: #FFFFFF;
-// padding: 63px 24px;
-// }
-
-// .products-list__box-below{
-//    padding: 24px 20px;
-//    border-left:  1px solid #EEEEEE;
-//    border-right:  1px solid #EEEEEE;
-//    border-bottom:  1px solid #EEEEEE;
-// }
-
-// .products-list__title{
-//     margin-bottom: 4px;
-// font-weight: 700;
-// font-size: 18px;
-// line-height: 2;
-// letter-spacing: 0.06em;
-// color:var(--secondary-color)
-
-
-// }
-
-// .products-list__text{
-// font-size: 16px;
-// line-height:1.87;
-// letter-spacing: 0.03em;
-// }
+@media screen and (min-width: 1200px){
+    .products-list{
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: -30px;
+        margin-left: -30px;
+    }
+    
+    .products-list__item{
+        margin-top: 30px;
+        margin-left: 30px;
+        flex-basis: calc((100% - 90px) / 3);
+        }
+    
+    .produkts-list__link{
+        display: block;
+        color: inherit;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus{
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+    }
+    
+    .produkts-list__box{
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .products-list__overlay{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(33, 150, 243, 0.9);
+        transform: translateY(101%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        .produkts-list__link:hover &,
+        .produkts-list__link:focus &{
+            transform: translateY(0);
+        }
+    }
+    
+    .products-list__description{
+        font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    padding: 63px 24px;
+    }
+    
+    .products-list__box-below{
+       padding: 24px 20px;
+       border-left:  1px solid #EEEEEE;
+       border-right:  1px solid #EEEEEE;
+       border-bottom:  1px solid #EEEEEE;
+    }
+    
+    .products-list__title{
+        margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color:var(--secondary-color)
+    
+    
+    }
+    
+    .products-list__text{
+    font-size: 16px;
+    line-height:1.87;
+    letter-spacing: 0.03em;
+    }
+}
