--- a/css/main.css
+++ b/css/main.css
@@ -1015,7 +1015,7 @@ body {
     margin-right: auto;
     background-size: cover;
     background-color: #C4C4C4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-mobile.jpg);
     background-position: center;
     background-repeat: no-repeat;
   }
@@ -1076,7 +1076,7 @@ body {
     margin-right: auto;
     background-size: cover;
     background-color: #C4C4C4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tablet.jpg);
     background-position: center;
     background-repeat: no-repeat;
   }
@@ -1137,11 +1137,17 @@ body {
     background-size: cover;
     max-width: 1600px;
     background-color: #C4C4C4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop.jpg);
     background-position: center;
     background-repeat: no-repeat;
   }
-
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
   .hero__title {
     font-weight: 900;
     font-size: 44px;
@@ -1155,7 +1161,8 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
-
+}
+@media screen and (min-width: 1200px) {
   .hero__button {
     font-family: var(--primary-font);
     font-weight: 700;
