--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,7 +8,7 @@
     margin-right: auto;
     background-size: cover;
         background-color: #C4C4C4;
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-mobile.jpg);
        background-position: center;
        background-repeat: no-repeat;
 } 
@@ -59,7 +59,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }}
 
 }
-@media screen and(min-width: 768px) and(max-width: 1199px){
+@media screen and(min-width: 768px) and (max-width: 1199px){
     .hero{
         width: 100%;
     padding-top: 118px;
@@ -68,7 +68,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-right: auto;
     background-size: cover;
         background-color: #C4C4C4;
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tablet.jpg);
        background-position: center;
        background-repeat: no-repeat;
 } 
@@ -127,9 +127,15 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-size: cover;
         max-width: 1600px;
         background-color: #C4C4C4;
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop.jpg);
        background-position: center;
        background-repeat: no-repeat;
+}
+@media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx){
+    .hero{
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop@2x.jpg);
+    }
+   
 }
 
 .hero__title{
