--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -127,15 +127,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-size: cover;
         max-width: 1600px;
         background-color: #C4C4C4;
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop.jpg);
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero-bg-desktop.webp);
        background-position: center;
        background-repeat: no-repeat;
-}
-@media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx){
-    .hero{
-        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop@2x.jpg);
-    }
-   
 }
 
 .hero__title{
