--- a/css/main.css
+++ b/css/main.css
@@ -20,16 +20,6 @@
   overflow: hidden;
 }
 
-.section__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-color);
-  margin-bottom: 50px;
-}
-
 h1,
 h2,
 h3,
@@ -251,6 +241,28 @@ body {
   margin-bottom: 20px;
 }
 
+.section__title {
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .section__title {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.1785714286;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section__title {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.1666666667;
+    margin-bottom: 50px;
+  }
+}
 .backdrop {
   position: fixed;
   top: 0;
@@ -806,8 +818,8 @@ body {
   }
 
   .page-header {
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-bottom: 1px solid #ECECEC;
   }
 
@@ -1137,7 +1149,7 @@ body {
     background-size: cover;
     max-width: 1600px;
     background-color: #C4C4C4;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-bg-desktop.webp);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-desktop.webp);
     background-position: center;
     background-repeat: no-repeat;
   }
@@ -1675,9 +1687,8 @@ body {
     margin-bottom: 40px;
   }
 
-  .buttons__item:not(:last-child) {
-    margin-right: 8px;
-    margin-bottom: 15px;
+  .buttons {
+    gap: 15px 8px;
   }
 
   .buttons__content {
@@ -1705,7 +1716,7 @@ body {
   .buttons {
     display: flex;
     justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   .buttons__item:not(:last-child) {
@@ -1734,7 +1745,7 @@ body {
   }
 }
 @media screen and (max-width: 767px) {
-  .products-list__item {
+  .products-list__item:not(:last-child) {
     margin-bottom: 30px;
   }
 
@@ -1826,7 +1837,6 @@ body {
   .produkts-list__box {
     overflow: hidden;
     position: relative;
-    flex-grow: 1;
   }
 
   .products-list__overlay {
@@ -1852,6 +1862,7 @@ body {
   }
 
   .products-list__box-below {
+    flex-grow: 1;
     padding: 24px 20px;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
@@ -1933,8 +1944,8 @@ body {
 
   .products-list__title {
     margin-bottom: 4px;
-    font-weight: 700;
     font-size: 18px;
+    font-weight: 700;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--secondary-color);
@@ -1942,19 +1953,21 @@ body {
 
   .products-list__text {
     font-size: 16px;
-    line-height: 1.87;
+    font-weight: 400;
+    line-height: 1.875;
     letter-spacing: 0.03em;
   }
 }
 .footer {
   background-color: #2F303A;
+  padding: 60px 0;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: baseline;
   }
 }
