--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer{
     background-color:#2F303A;
+    padding: 60px 0;
 }
 
 @media screen and (max-width:767px){
@@ -10,7 +11,7 @@
     .footer-content{
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: baseline;
 
     }
